crates/toml/tests/snapshots/invalid/datetime/only-T.stderr
TOML parse error at line 1, column 7
  |
1 | foo = T
  |       ^
invalid boolean, expected `true`
